IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
 name: simpleingressroute
 namespace: default
spec:
 entryPoints:
 - web
 routes:
 - match: Host(`your.domain.com`) &&
PathPrefix(`/notls`)
 kind: Rule
 services:
 - name: wordpress
 port: 80
